--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,22 +1,9 @@
 <%= form_with(model: company) do |form| %>
-  <% if company.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(company.errors.count, "error") %> prohibited this company from being saved:</h2>
-
-      <ul>
-        <% company.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="form-group mb-3">
+    <%= form.text_field :name, class: "form-control mb-1", placeholder: "Name" %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group ms-2">
+    <%= form.submit "Submit", class: "btn btn-secondary mb-3" %>
   </div>
 <% end %>
