--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+
     <title>Rails Employee Tracker</title>
 
     <%= csrf_meta_tags %>
@@ -19,7 +22,7 @@
 
   <body>
     <!-- Put body in a bootstrap container -->
-    <div class="container">
+    <div class="container pt-3 pb-3">
       <!-- If any notices or alerts are sent, render them with corresponding partial -->
       <% if notice %>
         <%= render 'layouts/notices' %>
