styling, cleaning up

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -4,6 +4,6 @@
   </div>
 
   <div class="form-group ms-2">
-    <%= form.submit "Submit", class: "btn btn-secondary mb-3" %>
+    <%= form.submit "Submit", class: "btn btn-secondary" %>
   </div>
 <% end %>
