--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="card mb-3 mt-3">
-  <div class="card-header text-center">
+<div class="card border-dark text-dark bg-light mb-3 mt-3">
+  <div class="card-header border-dark text-center">
     <h2>Edit Company</h2>
   </div>
   <div class="card-body">
